Few tweaks to the index file.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
 	<div class="container">
 		<div class="col-sm-6 col-sm-offset-3">
 			<h2 class="text-center">Things I Like</h2>
+			<h4 class="text-center">Type the <em>"/word"</em> at the end of the URL address</h4>
+			<h6 class="text-center">i.e.   http://localhost:8888<strong>/movies</strong></h6>
+			
 			<ul class="list-group">
                  
-                  <li class="list-group-item">Coding</li>
-                  <li class="list-group-item">Movies</li>
-                  <li class="list-group-item">Food</li>
+                  <li class="list-group-item">/coding</li>
+                  <li class="list-group-item">/movies</li>
+                  <li class="list-group-item">/food</li>
             </ul>
 		</div>
 	</div>
